# universal-process-gatherer

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  security_report.md
.github/workflows/: ci.yml  release.yml
benches/: process_collection.rs
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/collectors/: aix.rs  linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
src/core/: error.rs  mod.rs  process_info.rs
src/export/: formats.rs  mod.rs
src/security/: analyzer.rs  mod.rs  rules.rs
src/utils/: formatting.rs  mod.rs  parsing.rs
tests/integration/: basic_test.rs
tests/unit/: mod.rs
